glance-1/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-1
  namespace: glance-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`glance-k3s.pimonlab.xyz`)
      priority: 10
      services:
        - name: glance-1
          namespace: glance-1
          port: 8080
  tls:
    secretName: glance-1-ts-secret
